--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,31 +5,39 @@ header {
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
-  width: 100%
-  height: auto;
+  border-bottom: 1px solid black;
   display: flex;
   align-items: center;
-  padding: 0;
-  margin: 0;
-  border-bottom: 1px solid black;
+  z-index: 5;
+}
+
+.header{
+  width: 100%;
+  height: auto;
+  display: inline-flex;
+  align-items: center;
+  padding: 0 30px;
+  margin: 10px 0;
+  border: 1px solid black;
 }
 
 .logo {
-  padding: 10px;
+  padding: 0;
 }
 
 .name {
   color: MediumAquamarine;
-  height: auto;
-  min-width: 75px;;
+  padding: 10px;
+  min-width: 80px;
 }
 
 nav {
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
   height: auto;
-  width: 100%;
-  padding: 0;
-  margin: 10px;
+  width: auto;
+  padding-right: 30px;
+  margin: 0;
 }
 
 .box {
@@ -43,4 +51,215 @@ a {
   text-decoration: none;
   color: black;
   text-decoration-line: underline;
+}
+
+/* Container */
+
+.container {
+  display: flex;
+  border: 1px solid black;
+  width: 1230px;
+  margin: 0 auto;
+}
+
+.column.large {
+  width: 630px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  margin-top: 30px;
+  margin-right: 30px;
+  height: 1000px;
+}
+
+.col {
+  display: inline-flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 630px;
+  height: auto;
+  justify-content: space-around;
+  border: 1px solid red;
+  }
+
+.column.medium {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  margin-top: 30px;
+  margin-right: 30px;
+}
+
+.column.small {
+  width: 240px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  margin-top: 30px;
+  margin-right: 30px;
+}
+
+/* images */
+
+.image {
+  border: 1px solid black;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
+  display: flex;
+  height: 300px;
+  align-items: center;
+}
+
+.image h1 {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+  display: flex;
+  margin: 0;
+}
+
+.top {
+  border: 1px solid black;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+.orca {
+  border: 1px solid black;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+  display: inline-block;
+  width: 300px;
+}
+
+.earth {
+  border: 1px solid black;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
+  display: flex;
+  height: 300px;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+}
+
+.earth h2 {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  display: flex;
+  margin: 0;
+  text-align: center;
+}
+
+.burger {
+  border: 1px solid black;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+  display: inline-block;
+  width: 300px;
+}
+
+.reserch {
+  border: 1px solid black;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
+  display: flex;
+  height: 300px;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+}
+
+.reserch h2 {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  display: flex;
+  margin: 0;
+  text-align: center;
+}
+
+.FBI {
+  border: 1px solid black;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+.cats {
+  border: 1px solid black;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cats h2 {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  display: flex;
+  margin: 0;
+  text-align: center;
+}
+
+.brooklyn {
+  border: 1px solid black;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+/* News BITES */
+
+.news h4 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  font-family: Georgia;
+}
+
+.news .list {
+background-color: WhiteSmoke;
+font-family: Verdana;
+font-size: 12px;
+color: DimGray;
+list-style: none;
+margin: 0;
+border-bottom: 1px solid black;
+text-align: center;
+padding: 10px 0;
+}
+
+/* Footer */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 300px;
+}
+
+footer .name {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+footer .box {
+  display: inline-block;
 }
