--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,9 @@ header {
   display: flex;
   align-items: center;
   z-index: 5;
+  background-color: white;
+  width: 100%;
+  position:
 }
 
 .header{
@@ -18,20 +21,19 @@ header {
   align-items: center;
   padding: 0 30px;
   margin: 10px 0;
-  border: 1px solid black;
 }
 
 .logo {
   padding: 0;
 }
 
-.name {
+.header .name {
   color: MediumAquamarine;
   padding: 10px;
   min-width: 80px;
 }
 
-nav {
+header nav {
   display: flex;
   justify-content: flex-end;
   height: auto;
@@ -40,7 +42,7 @@ nav {
   margin: 0;
 }
 
-.box {
+header .box {
   height: auto;
   width: auto;
   padding: 0 10px;
@@ -57,7 +59,6 @@ a {
 
 .container {
   display: flex;
-  border: 1px solid black;
   width: 1230px;
   margin: 0 auto;
 }
@@ -66,10 +67,8 @@ a {
   width: 630px;
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
   margin-top: 30px;
   margin-right: 30px;
-  height: 1000px;
 }
 
 .col {
@@ -77,16 +76,14 @@ a {
   flex-direction: column;
   flex-wrap: wrap;
   width: 630px;
-  height: auto;
-  justify-content: space-around;
-  border: 1px solid red;
+  max-height: 650px;
+  justify-content: flex-start;
   }
 
 .column.medium {
   width: 300px;
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
   margin-top: 30px;
   margin-right: 30px;
 }
@@ -95,7 +92,6 @@ a {
   width: 240px;
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
   margin-top: 30px;
   margin-right: 30px;
 }
@@ -103,7 +99,6 @@ a {
 /* images */
 
 .image {
-  border: 1px solid black;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
   display: flex;
   height: 300px;
@@ -116,18 +111,17 @@ a {
   font-size: 40px;
   color: white;
   display: flex;
+  padding-left: 20px;
   margin: 0;
 }
 
 .top {
-  border: 1px solid black;
   font-family: Georgia;
   font-size: 17px;
   color: black;
 }
 
 .orca {
-  border: 1px solid black;
   font-family: Georgia;
   font-size: 17px;
   color: black;
@@ -136,7 +130,6 @@ a {
 }
 
 .earth {
-  border: 1px solid black;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
   display: flex;
   height: 300px;
@@ -156,7 +149,6 @@ a {
 }
 
 .burger {
-  border: 1px solid black;
   font-family: Georgia;
   font-size: 17px;
   color: black;
@@ -165,7 +157,6 @@ a {
 }
 
 .reserch {
-  border: 1px solid black;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
   display: flex;
   height: 300px;
@@ -185,14 +176,12 @@ a {
 }
 
 .FBI {
-  border: 1px solid black;
   font-family: Georgia;
   font-size: 17px;
   color: black;
 }
 
 .cats {
-  border: 1px solid black;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
   height: 300px;
   display: flex;
@@ -211,7 +200,6 @@ a {
 }
 
 .brooklyn {
-  border: 1px solid black;
   font-family: Georgia;
   font-size: 17px;
   color: black;
@@ -234,8 +222,12 @@ color: DimGray;
 list-style: none;
 margin: 0;
 border-bottom: 1px solid black;
-text-align: center;
-padding: 10px 0;
+text-align: left;
+padding: 10px 20px;
+}
+
+h3 {
+  font-size: 30px;
 }
 
 /* Footer */
@@ -251,15 +243,29 @@ footer {
   font-family: Verdana;
   font-size: 12px;
   height: 300px;
+  width: 100%;
 }
 
 footer .name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .name p {
   font-family: Georgia;
   font-size: 16px;
   font-weight: bold;
   color: white;
+  padding-right: 30px;
+  border-right: 1px solid white;
 }
 
-footer .box {
-  display: inline-block;
+footer .name nav {
+  margin-left: 30px;
+}
+
+footer .name nav .box {
+  text-align: center;
+  padding: 0 10px;
 }
